--- a/Symfony/config/packages/nelmio_api_doc.yaml
+++ b/Symfony/config/packages/nelmio_api_doc.yaml
@@ -1,8 +1,8 @@
 nelmio_api_doc:
     documentation:
         info:
-            title: My App
-            description: This is an awesome app!
+            title: Documentation Saas API
+            description: API CRM Gestion de commandes
             version: 1.0.0
     areas: # to filter documented areas
         path_patterns:
