--- a/Symfony/composer.json
+++ b/Symfony/composer.json
@@ -14,8 +14,10 @@
         "doctrine/orm": "^3.1",
         "lexik/jwt-authentication-bundle": "^3.0",
         "nelmio/api-doc-bundle": "^4.26",
+        "nelmio/cors-bundle": "^2.4",
         "phpdocumentor/reflection-docblock": "^5.4",
         "phpstan/phpdoc-parser": "^1.29",
+        "symfony/apache-pack": "^1.0",
         "symfony/asset": "6.4.*",
         "symfony/asset-mapper": "6.4.*",
         "symfony/console": "6.4.*",
