--- a/Symfony/.env
+++ b/Symfony/.env
@@ -45,3 +45,14 @@ JWT_PASSPHRASE=
 ###> nelmio/cors-bundle ###
 #CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
+
+## oAuth Google
+#OAUTH_GOOGLE_CLIENT_ID=
+#OAUTH_GOOGLE_CLIENT_SECRET=
+## oAuth Google
+###> google/apiclient ###
+GOOGLE_API_KEY=
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_AUTH_CONFIG=%kernel.project_dir%/path/to/file.json
+###< google/apiclient ###
