--- a/Symfony/composer.json
+++ b/Symfony/composer.json
@@ -12,6 +12,11 @@
         "doctrine/doctrine-bundle": "^2.12",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^3.1",
+        "firebase/php-jwt": "^6.10",
+        "google/apiclient": "2.15.0",
+        "google/auth": "^1.40",
+        "knpuniversity/oauth2-client-bundle": "^2.18",
+        "league/oauth2-google": "^4.0",
         "lexik/jwt-authentication-bundle": "^3.0",
         "nelmio/api-doc-bundle": "^4.26",
         "nelmio/cors-bundle": "^2.4",
